--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "start:test": "NODE_ENV=test node index.js"
-
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -15,11 +14,11 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "jest": "^29.4.2",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   },
